plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'

}

group = 'com.tabihoudai'
version = '0.0.1-SNAPSHOT'


java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //jpa & oracle
    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //gson - json 메세지를 다루기 위한 라이브러리
    implementation 'com.google.code.gson:gson'

    // jwts
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //dto validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //mail
    implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.3'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '1.6.7'
}

tasks.named('test') {
    useJUnitPlatform()
}
